--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,13 @@ h3.my-profession
     }
     .home .home-img
     {
-        display: none;
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-top: 30px;
+    }
+    .home .home-info .btn
+    {
+        margin-bottom: 40px;
     }
 }
 @media (max-width: 767px)
